--- a/public/404.html
+++ b/public/404.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="auto">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="utf-8">
+<head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="noindex, nofollow">
-<title>Categories | Joe Stanley</title>
+<meta name="robots" content="index, follow">
+<title>404 Page not found | Joe Stanley</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="http://localhost:1313/categories/">
+<link rel="canonical" href="https://joestanley3.github.io/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.9b711a6dfe0811a994f18158630098bfc438e67f98f4f58afb74e786d0baa3b5.css" integrity="sha256-m3Eabf4IEamU8YFYYwCYv8Q45n&#43;Y9PWK&#43;3TnhtC6o7U=" rel="preload stylesheet" as="style">
-<link rel="icon" href="http://localhost:1313/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32x32.png">
-<link rel="apple-touch-icon" href="http://localhost:1313/apple-touch-icon.png">
-<link rel="mask-icon" href="http://localhost:1313/safari-pinned-tab.svg">
+<link rel="icon" href="https://joestanley3.github.io/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://joestanley3.github.io/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://joestanley3.github.io/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://joestanley3.github.io/apple-touch-icon.png">
+<link rel="mask-icon" href="https://joestanley3.github.io/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="http://localhost:1313/categories/index.xml">
-<link rel="alternate" hreflang="en" href="http://localhost:1313/categories/">
+<link rel="alternate" hreflang="en" href="https://joestanley3.github.io/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -56,7 +55,15 @@
         }
 
     </style>
-</noscript>
+</noscript><meta property="og:url" content="https://joestanley3.github.io/404.html">
+  <meta property="og:site_name" content="Joe Stanley">
+  <meta property="og:title" content="404 Page not found">
+  <meta property="og:locale" content="en-us">
+  <meta property="og:type" content="website">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="404 Page not found">
+<meta name="twitter:description" content="">
+
 </head>
 
 <body class="list" id="top">
@@ -70,23 +77,23 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://localhost:1313/" accesskey="h" title="Joe Stanley (Alt + H)">Joe Stanley</a>
+            <a href="https://joestanley3.github.io/" accesskey="h" title="Joe Stanley (Alt + H)">Joe Stanley</a>
             <div class="logo-switches">
             </div>
         </div>
         <ul id="menu">
             <li>
-                <a href="http://localhost:1313/" title="Home">
+                <a href="https://joestanley3.github.io/" title="Home">
                     <span>Home</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/page/about/" title="About">
+                <a href="https://joestanley3.github.io/page/about/" title="About">
                     <span>About</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/page/career/" title="Career">
+                <a href="https://joestanley3.github.io/page/career/" title="Career">
                     <span>Career</span>
                 </a>
             </li>
@@ -94,12 +101,7 @@
     </nav>
 </header>
 <main class="main">
-<header class="page-header">
-    <h1>Categories</h1>
-</header>
-
-<ul class="terms-tags">
-</ul>
+<div class="not-found">404</div>
     </main>
     
 
