--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="canonical" href="https://joestanley3.github.io/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.9b711a6dfe0811a994f18158630098bfc438e67f98f4f58afb74e786d0baa3b5.css" integrity="sha256-m3Eabf4IEamU8YFYYwCYv8Q45n&#43;Y9PWK&#43;3TnhtC6o7U=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.f66cce4c1424ecc53cfd67b2350a1bb920b44ca58cbb60969c1f21c4a66bd34b.css" integrity="sha256-9mzOTBQk7MU8/WeyNQobuSC0TKWMu2CWnB8hxKZr00s=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://joestanley3.github.io/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://joestanley3.github.io/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://joestanley3.github.io/favicon-32x32.png">
@@ -75,7 +75,7 @@
   "description": "",
   "logo": "https://joestanley3.github.io/favicon.ico",
   "sameAs": [
-      "https://bsky.app/profile/joestanley.org", "https://www.linkedin.com/in/josephstanley/", "mailto:mail@joestanley.org", "https://www.x.com"
+      "https://bsky.app/profile/joestanley.org", "https://www.linkedin.com/in/josephstanley/", "mailto:mail@joestanley.org"
   ]
 }
 </script>
@@ -145,15 +145,6 @@
     stroke-linecap="round" stroke-linejoin="round">
     <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
     <polyline points="22,6 12,13 2,6"></polyline>
-</svg>
-    </a>
-    <a href="https://www.x.com" target="_blank" rel="noopener noreferrer me"
-        title="Twitter">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-    stroke-linecap="round" stroke-linejoin="round">
-    <path
-        d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z">
-    </path>
 </svg>
     </a>
 </div>
