--- a/public/404.html
+++ b/public/404.html
@@ -88,13 +88,8 @@
                 </a>
             </li>
             <li>
-                <a href="https://joestanley3.github.io/page/about/" title="About">
-                    <span>About</span>
-                </a>
-            </li>
-            <li>
-                <a href="https://joestanley3.github.io/page/career/" title="Career">
-                    <span>Career</span>
+                <a href="https://joestanley3.github.io/page/readme/" title="ReadMe">
+                    <span>ReadMe</span>
                 </a>
             </li>
         </ul>
